fix: illegal use of node event emitter. change to ipc