@@ -51,11 +51,11 @@ public class AndroidUnitTest {
 
     private URL getURL() {
         try {
-            // System.out.println("URL #1: " + URI.create("{{remoteAddress}}").toURL().toString());
-            log.debug("URL #2: {}", URI.create("{{remoteAddress}}").toURL().toString());
-            return URI.create("{{remoteAddress}}").toURL();
-            // return Paths.get("{{remoteAddress}}"); // .toUri().toURL();
-            // return new URL("{{remoteAddress}}"); // "http://localhost:4723"
+            // System.out.println("URL #1: " + URI.create("{{serverAddress}}").toURL().toString());
+            log.debug("URL #2: {}", URI.create("{{serverAddress}}").toURL().toString());
+            return URI.create("{{serverAddress}}").toURL();
+            // return Paths.get("{{serverAddress}}"); // .toUri().toURL();
+            // return new URL("{{serverAddress}}"); // "http://localhost:4723"
         } catch (MalformedURLException e) {
             // e.printStackTrace();
             // System.out.println("Error creating URL1 " + e.toString());
@@ -77,7 +77,7 @@ public class AndroidUnitTest {
     // appium-reporter-plugin
     public static void setTestInfo(String sessionId, String testName, String testStatus, String error) {
         try {
-            String url = "{{remoteAddress}}/setTestInfo";
+            String url = "{{testerAddress}}/setTestInfo";
             String body = "{" +
                     "\"sessionId\":\""+sessionId+"\"," +
                     "\"testName\":\""+testName+"\"," +
@@ -98,7 +98,7 @@ public class AndroidUnitTest {
 
     // appium-reporter-plugin
     public String getReport() throws IOException, InterruptedException {
-        String url = "{{remoteAddress}}/getReport";
+        String url = "{{testerAddress}}/getReport";
         String report = Unirest.get(url).asString().getBody();
         System.out.println("received report = " + report);
         return report;
@@ -106,7 +106,7 @@ public class AndroidUnitTest {
 
     // appium-reporter-plugin
     public void deleteReportData() throws IOException, InterruptedException {
-        String url = "{{remoteAddress}}/deleteReportData";
+        String url = "{{testerAddress}}/deleteReportData";
         Unirest.delete(url).asEmpty();
         System.out.println("report data deleted done!");
     }
@@ -203,7 +203,7 @@ public class AndroidUnitTest {
             options.setCapability("reportFormat", reportFormat);
             options.setCapability("testName", testName);
 
-            driver = new AndroidDriver(Objects.requireNonNull(getURL()), options); // "{{remoteAddress}}"), options);
+            driver = new AndroidDriver(Objects.requireNonNull(getURL()), options); // "{{serverAddress}}"), options);
             driver.setLogLevel(Level.INFO);
             driver.addLogcatConnectionListener(new Runnable() {
                public void run() {
